--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
     "valarray": "cpp",
     "xutility": "cpp",
     "iostream": "cpp",
-    "utility": "cpp"
-  }
+    "utility": "cpp",
+    "xstring": "cpp"
+  },
+  "C_Cpp.errorSquiggles": "Disabled"
 }
